---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `invalid.js`

```js
if

```

## `valid.js`

```js
for(;true;);

```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
invalid.js parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Skipped file with syntax errors
  

```

```block
valid.js:1:6 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unexpected constant condition.
  
  > 1 │ for(;true;);
      │      ^^^^
    2 │ 
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
